--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body{
     width: 15vw;
     border-radius: 20px;
     background-color: rgba(0, 0, 92, 0.894);
+    margin-right: 50px;
 }
 
 .inner-profile-container{
@@ -69,6 +70,111 @@ body{
     gap: 1rem;
 }
 
+/* ACTIVITIES */
+
+.activities{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 2rem;
+}
+
+/* WORK */
+
+.work-container{
+    background-color: orange;
+    border-radius: 20px;
+}
+
+.work{
+    height: 70%;
+}
+
+/* PLAY */
+
+.play-container{
+    background-color: aquamarine;
+    border-radius: 20px;
+}
+
+.play{
+    height: 70%;
+}
+
+/* STUDY */
+
+.study-container{
+    background-color: pink;
+    border-radius: 20px;
+}
+
+.study{
+    height: 70%;
+}
+
+/* Exercise */
+
+.exercise-container{
+    background-color: lightgreen;
+    border-radius: 20px;
+}
+
+.exercise{
+    height: 70%;
+}
+
+/* SOCIAL */
+
+.social-container{
+    background-color: purple;
+    border-radius: 20px;
+}
+
+.social{
+    height: 70%;
+}
+
+/* SELF-CARE */
+
+.self-care-container{
+    background-color: yellow;
+    position: relative;
+    border-radius: 20px;
+}
+
+.self-care{
+    height: 70%;
+}
+
+
+/* INNER ACTIVITIES CONTAINERS */
+
+.work, .play, .study, .exercise, .social, .self-care{
+    background-color: rgba(0, 0, 92, 0.894);
+    position: relative;
+    height: 70%;
+    margin-top: 78px;
+    padding-top: 30px;
+    border-radius: 20px;
+    color: white;
+}
+
+h3{
+    width: 50%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+p{
+    margin-top: 30px;
+    width: 50%;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.414);
+}
+
+/* ANCHORS */
+
 a{
     margin-left: 20px;
     margin-bottom: 15px;
@@ -76,3 +182,6 @@ a{
     color: rgba(255, 255, 255, 0.414);
 }
 
+a:hover{
+    color: white;
+}
