--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,13 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(0, 0, 27);
 }
 
 /* OUTER-CONTAINER */
 
 .outer-container{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 60vw;
     height: 60vh;
     padding: 20px;
@@ -47,7 +48,10 @@ body{
 .profile-image{
     height: 15vh;
     border: 1px solid white;
-    border-radius: 20px;
+    border-radius: 50%;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 20px;
     margin-bottom: 90px;
 }
 
@@ -78,6 +82,15 @@ body{
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 2rem;
+}
+
+.time-hrs{
+    display: flex;
+    gap: 5px;
+    margin-left: 40px;
+    font-size: 30px;
+    color: rgba(245, 245, 245, 0.468);
+    
 }
 
 /* WORK */
@@ -153,10 +166,11 @@ body{
     background-color: rgba(0, 0, 92, 0.894);
     position: relative;
     height: 70%;
-    margin-top: 78px;
+    margin-top: 80px;
     padding-top: 30px;
     border-radius: 20px;
     color: white;
+    z-index: 1;
 }
 
 h3{
